--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -28,4 +28,9 @@ Pillow>=10.0.0
 structlog>=23.2.0
 
 # Validación de datos
-email-validator>=2.1.0 
+email-validator>=2.1.0
+
+# Procesamiento de archivos Excel
+pandas>=2.0.0
+openpyxl>=3.1.0
+xlrd>=2.0.0 
