feat: Implementar nuevo diseño SIRRET con logo y esquema azul eléctrico
- Cambiar nombre del sistema a SIRRET
- Implementar degradado azul eléctrico (#0066ff → #00ccff → #87ceeb)
- Agregar soporte para logo en login y topbar
- Crear logo SVG de respaldo temporal
- Configurar assets correctamente en angular.json
- Agregar manejo de errores para carga de logo
- Actualizar estilos con nuevo branding
- Crear archivo .env para configuración de MongoDB
- Documentar instrucciones de logo

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -29,7 +29,9 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/favicon.ico",
+              "src/assets"
             ],
             "styles": [
               "src/styles.scss"
@@ -45,8 +47,8 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "10kB",
-                  "maximumError": "20kB"
+                  "maximumWarning": "15kB",
+                  "maximumError": "25kB"
                 }
               ],
               "outputHashing": "all"
