--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "frontend",
-  "version": "0.0.0",
+  "name": "sirret-frontend",
+  "version": "1.0.0",
+  "description": "Sistema Integral de Registros y Regulación de Empresas de Transporte - Frontend",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -31,6 +32,7 @@
     "@angular/router": "^20.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
