--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,23 +1,32 @@
 # Dockerfile para Frontend Angular
-FROM node:20-alpine
+FROM node:18-alpine AS builder
 
 # Establecer directorio de trabajo
 WORKDIR /app
-
-# Instalar Angular CLI globalmente
-RUN npm install -g @angular/cli@20
 
 # Copiar package.json y package-lock.json
 COPY package*.json ./
 
 # Instalar dependencias
-RUN npm ci
+RUN npm ci --only=production
 
 # Copiar código fuente
 COPY . .
 
-# Exponer puerto
-EXPOSE 4200
+# Construir la aplicación para producción
+RUN npm run build --prod
 
-# Comando para ejecutar en desarrollo
-CMD ["ng", "serve", "--host", "0.0.0.0", "--port", "4200", "--poll", "2000"]
+# Etapa de producción con Nginx
+FROM nginx:alpine
+
+# Copiar archivos construidos
+COPY --from=builder /app/dist/sirret-frontend /usr/share/nginx/html
+
+# Copiar configuración personalizada de Nginx
+COPY nginx.conf /etc/nginx/nginx.conf
+
+# Exponer puerto 80
+EXPOSE 80
+
+# Comando por defecto
+CMD ["nginx", "-g", "daemon off;"]
