--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,63 +1,62 @@
-worker_processes auto;
-error_log /var/log/nginx/error.log warn;
-pid /var/run/nginx.pid;
-
 events {
     worker_connections 1024;
-    use epoll;
 }
 
 http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+    
+    # Configuración de logging
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
-
+    
     access_log /var/log/nginx/access.log main;
-
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    types_hash_max_size 2048;
-    client_max_body_size 10M;
-
-    # Gzip compression
+    error_log /var/log/nginx/error.log warn;
+    
+    # Configuración de compresión
     gzip on;
     gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_types text/plain text/css text/xml text/javascript 
-               application/json application/javascript application/xml+rss 
-               application/rss+xml font/truetype font/opentype 
-               application/vnd.ms-fontobject image/svg+xml;
-
-    # Security headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "no-referrer-when-downgrade" always;
-
+    gzip_min_length 1024;
+    gzip_proxied expired no-cache no-store private must-revalidate auth;
+    gzip_types
+        text/plain
+        text/css
+        text/xml
+        text/javascript
+        application/javascript
+        application/xml+rss
+        application/json;
+    
     server {
         listen 80;
-        server_name _;
+        server_name localhost;
         root /usr/share/nginx/html;
         index index.html;
-
-        # Cache static assets
-        location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
+        
+        # Configuración para Angular SPA
+        location / {
+            try_files $uri $uri/ /index.html;
+            
+            # Headers de seguridad
+            add_header X-Frame-Options "SAMEORIGIN" always;
+            add_header X-Content-Type-Options "nosniff" always;
+            add_header X-XSS-Protection "1; mode=block" always;
+            add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        }
+        
+        # Cache para archivos estáticos
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
-
-        # Angular routing
-        location / {
-            try_files $uri $uri/ /index.html;
+        
+        # Configuración para el manifest.json
+        location /manifest.json {
+            add_header Content-Type application/json;
         }
-
-        # Health check endpoint
+        
+        # Health check
         location /health {
             access_log off;
             return 200 "healthy\n";
